Remove JDK 11 as test JDK